--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,25 +1,97 @@
-.carousel
+/* en vrac :
+100% 100% 100% 0 auto border-box box-sizing 
+display height flex flex none margin 
+max-width width width
+*/
+* {
+  /* change le box model */
+}
 
-.carousel_btn {
+img {
+  /* image responsive, largeur maxi */
+  /* hauteur "auto" */
+}
+
+.carrousel_parent-ecrans {
+  /* aligne horizontalement les enfants */
+  /* largeur du parent */
+
+}
+
+.carrousel_ecran {
+  /* largeur du parent pour chaque enfant */
+  /* permet de garder toute la largeur du parent */
+}
+
+.carrousel_ecran figure {
+  /* enlève les marges par défaut */
+}
+
+La page doit maintenant avoir les écrans à l'horizontal et un ascenseurs de même.
+
+Scroll Ajouter sur le parent des écrans : overflow-x: scroll;
+/* permet de scroller horizontalement */
+Tester les liens et le scroll. scroll-behavior: smooth;
+/* animation de défilement */
+Tester les liens,
+le scroll doit être animé (fluide). snapp et aligment scroll-snap-type sur le parent scroll-snap-type: x mandatory;
+/* permet de scroller par blocs */
+scroll-snap-align sur les enfants scroll-snap-align: start;
+
+/* aligne les enfants par blocs */
+Tester le défilement horizontal : il doit se faire "par bloc/écran" . Placement des boutons avant/aprés .carrousel {
+  position: relative;
+}
+
+.carrousel_btn {
+  position: absolute;
+  top: 50%;
+  /* centre verticalement */
+  transform: translateY(-50%);
+  /* methode du point mort */
+  width: 2rem;
+  height: 2rem;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  border: none;
+  display: grid;
+  place-content: center;
+  color: #fff;
+}
+
+.carrousel_btn-avant {
+  left: 0;
+}
+
+.carrousel_btn-apres {
+  right: 0;
+}
+
+Ils seront trop bas car la hauteurs des liens et de la légendes ne sont pas pris en comptes.
+
+
+
+
+
+
+.carousel .carousel_btn {
   position: absolute;
   top: calc(100vw / 2 *9);
-  
+
 }
 
 .carousel_btn {
-  left:0;
+  left: 0;
 
 }
 
 .carousel_parent-ecrans {
- display: flex;
- width: 100%;
- overflow-x: scroll;
- scroll-behavior: smooth;
- scroll-snap-type: x mandatory;
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
 }
-
-
 
 .carousel_liste-liens {
   display: flex;
