Links HTML CSS début

--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -22,7 +22,7 @@ Sommaire :
     --black: #000000;
 }
 
-/* Uniformisation  */
+/* Uniformisation de la mise en forme des boutons */
 
 button {
     -webkit-appearance: none;
