--- a/src/css/components/carrousel.css
+++ b/src/css/components/carrousel.css
@@ -1,11 +1,3 @@
-/* Database CSS
-
-Sommaire :
-
-    1. main.css
-    2. 
-*/
-
 .carrousel {
     position: relative;
 }
@@ -25,6 +17,11 @@ Sommaire :
 
 .carrousel_ecran figure {
     margin: 0;
+    position: relative;
+    overflow: hidden;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration-color: var(--secondary-color);
 }
 
 .carrousel_btn {
@@ -40,14 +37,15 @@ Sommaire :
     place-content: center;
     color: var(--white);
     cursor: pointer;
+    z-index: 1;
 }
 
 .carrousel_btn-avant {
-    left: 0;
+    left: 1rem;
 }
 
 .carrousel_btn-apres {
-    right: 0;
+    right: 1rem;
 }
 
 .carrousel .carousel_btn {
@@ -67,9 +65,20 @@ Sommaire :
     color: var(--black);
     font-weight: normal;
     transition: color 0.3s ease-in-out;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    border: 1px solid var(--black);
 }
 
 .carroussel_lien.actif {
-    color: var(--secondary-color);
+    color: var(--white);
     font-weight: bold;
+    text-decoration: none;
+       
+}
+
+.carrousel_images {
+    width: 100%;
+    height: auto;
+    display: block;
 }
