--- a/src/css/components/carrousel.css
+++ b/src/css/components/carrousel.css
@@ -75,6 +75,7 @@
     color: var(--white);
     font-weight: bold;
     text-decoration: none;
+    list-style-type: none;
 }
 
 .carrousel_images {
