--- a/src/css/base/media.css
+++ b/src/css/base/media.css
@@ -11,14 +11,23 @@ Sommaire :
 
 * {
     box-sizing: border-box;
+    text-align: center;
 }
 
 /* Images */
 
 img {
+    display: block;
+    width: 700px;
+    margin: 0 auto;
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+}
+
+img.icon {
+    width: 34px;
+    height: 34px;
 }
 
 /* Média taille */
