--- a/src/css/components/carrousel.css
+++ b/src/css/components/carrousel.css
@@ -1,5 +1,6 @@
-.carrousel {
-    position: relative;
+* {
+    box-sizing: border-box;
+    text-align: center;
 }
 
 .carrousel_parent-ecrans {
@@ -11,18 +12,21 @@
 }
 
 .carrousel_ecran {
+    width: 100%;
     flex: 0 0 100%;
     scroll-snap-align: start;
     text-align: center;
-    flex: none;
 }
 
 .carrousel_ecran figure {
     margin: 0;
-    
     overflow: hidden;
     border-radius: 8px;
     text-decoration-color: var(--secondary-color);
+}
+
+.carrousel {
+    position: relative;
 }
 
 .carrousel_btn {
@@ -39,7 +43,7 @@
     place-content: center;
     color: var(--white);
     cursor: pointer;
-    padding: 5px 17px;    
+    padding: 5px 17px;
 }
 
 .carrousel_btn-avant {
@@ -54,43 +58,28 @@
     top: calc(9/20 * 100vh);
 }
 
-.carrousel_liste-liens {
+.caroussel_liste-liens {
     display: flex;
     justify-content: center;
     margin: 0;
-    gap: 1rem;
-    margin-top: 4px;
-    padding: 1rem 0.5rem;
     list-style-type: none;
+    gap: 1rem;
+    margin-top: 40px;
+    padding: 1rem 0.5rem;
+    text-decoration: none;
 }
-
- button.lien {
-     background-color: none;
-     border: none;
-     color: white;
-     padding: 5px 36px;
-     text-align: center;
-     text-decoration: none;
-     display: inline-block;
-     font-size: 16px;
-     border-radius: 6%;
-     cursor: pointer;
- }
-
- button:hover {
-     background-color: #ddd;
-     color: #ddd;
- }
 
 .carrousel_lien {
     text-decoration: none;
-    color: var(--black);
+    color: var(--white);
     font-weight: normal;
     transition: color 0.3s ease-in-out;
     padding: 0.5rem 1rem;
     border-radius: 8px;
+    font-size: 16px;
     border: 1px solid var(--black);
-    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
 }
 
 .carroussel_lien.actif {
@@ -98,18 +87,13 @@
     font-weight: bold;
     text-decoration: none;
     list-style-type: none;
+
 }
 
 .carrousel_images {
     width: 100%;
     height: auto;
     display: block;
-}
-
-.carrousel_description {
-    color: var(--white);
-    font-size: 1.5rem;
-    margin-top: 1rem;
 }
 
 .list {
@@ -121,85 +105,12 @@
     color: var(--white);
 }
 
-* {
-    box-sizing: border-box;
+.carrousel_description {
+    color: var(--white);
+    font-size: 25px;
+    font-family: 'Lato', sans-serif;
     text-align: center;
-}
-
-.carrousel_parent-ecrans {
-    display: flex;
-    width: 100%;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    scroll-snap-type: x mandatory;
-
-}
-
-.carrousel_ecran {
-    width: 100%;
-    flex: none;
-    scroll-snap-align: start;
-}
-
-.carrousel_ecran figure {
-    margin: 0;
-}
-
-.carrousel {
-    position: relative;
-}
-
-.carrousel_btn {
-    position: absolute;
-    top: 50%;
-    top: calc(min(730px, 100vw) / 16 * 9 / 2 + 1rem);
-    transform: translateY(-50%);
-    width: 2rem;
-    height: 2rem;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 100%;
-    border: none;
-    display: grid;
-    place-content: center;
-    color: #fff;
-    padding: 5px 17px;
-
-}
-
-.carrousel_btn-avant {
-    left: 0;
-}
-
-.carrousel_btn-apres {
-    right: 0;
-}
-
-.caroussel_liste-liens {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    list-style: none;
-    gap: 1rem;
-    margin-top: 40px;
-    padding: 1rem 0.5rem;
+    margin-top: 1rem;
     text-decoration: none;
-
-}
-
-button.lien {
-    background-color: #004466;
-    border: none;
-    color: white;
-    padding: 5px 36px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 6%;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #ddd;
-    color: #ddd;
+    font-style: oblique;
 }
